--- a/client/src/Components/Footer/footer.scss
+++ b/client/src/Components/Footer/footer.scss
@@ -5,5 +5,5 @@
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
-    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
 }
